# HDR_Deghosting

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
shaders/: initial_weights.glsl  iterate_weights.glsl  merge_hdr.glsl
